# AmpliconNode

./: CMakeLists.txt  README.md  main.cpp
abseil-cpp-master/: CMakeLists.txt
abseil-cpp-master/absl/base/: config.h
abseil-cpp-master/absl/base/internal/: raw_logging.h
abseil-cpp-master/absl/container/internal/: raw_hash_set.h
abseil-cpp-master/absl/types/internal/: optional.h
common_lib/: CMakeLists.txt  biginteger_arithmetic.cpp  biginteger_arithmetic.h  kmp_search.cpp  kmp_search.h
google-test/: CMakeLists.txt  biginteger_arithmetic_test.cpp  kmp_search_test.cpp
google-test/lib/googletest/include/gtest/internal/: gtest-port.h
proto/: biginteger.proto  finite_field.proto  node.proto  nodes_list_server.proto
